<?xml version="1.0"?>
<package format="3">
  <name>go2_robot</name>
  <version>0.0.1</version>
  <description>The unitree go2 robot package</description>
  <maintainer email="juancarlos.serrano@urjc.es">Juan Carlos Manzanares Serrano</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>go2_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>